@@ -1,3 +1,11 @@
+1999-04-13  Katsumi Yamaoka   <yamaoka@jpl.org>
+
+	* mime-mc.el (mime-mc-pgp50-sign-region, mime-mc-gpg-sign-region):
+	Don't deactivate passwd during detecting the value of `micalg' even
+	if `mc-passwd-timeout' is set to nil.
+	(mime-mc-gpg-process-region): Print this function name for
+	debugging.
+
 1999-04-12  Katsumi Yamaoka   <yamaoka@jpl.org>
 
 	* mime-pgp.el (mime-pgp-check-signature): Return nil if neither bad
